--- a/VRChat/95/1283695.html
+++ b/VRChat/95/1283695.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rrDT8hq98AtaT5S0tvF7TCw2lGzP9tTCx3jFSNpCqC8="></script>
+    "cFa56CK4EtMF++Q3QK0c5BpCmdFyIA9zCpHfi99rrcw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(ガン・デル・ソル) 3D モデル","description":"これは(ガン・デル・ソル) 3D モデルです\n\n-内容物\n-Gun_Del_Sol.fbx\n-Gun_Del_Sol_Texture.png\n-Gun_Del_Sol_UV.png\n-UnityPackage\n-Gun_Del_Sol.blend\n-Arktoon-Shader\n\nこのモデルはArktoon-Shaderを使用しております。\n\nVRchat用を想定して作っていますが、ゲームやアニメーション、配信などでも使えます。\n\n-改変について\n-[(ガン・デル・ソル) 3D モデル]とそれに関連したデータの改変は自由です。\n\n[(ガン・デル・ソル) 3D モデル]とその付属のモデルデータ・テクスチャーデータの再配付・販売は改変の有無を問わず禁止します。\nVRchatのアバターペデスタルなど、購入者以外が[(ガン・デル・ソル) 3D モデル]を自由に使用できるようにする行為を禁止します。\nまた、特定個人や団体への誹謗中傷、政治、宗教活動を目的とした利用を禁止します。","url":"https://booth.pm/ja/items/1283695","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/4d13e485-5af6-4f8e-88c4-0a6e1dd3fe70/i/1283695/d5447e19-f8af-4234-9a11-bef973ccdd55_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rrDT8hq98AtaT5S0tvF7TCw2lGzP9tTCx3jFSNpCqC8="></script>
+    nonce="cFa56CK4EtMF++Q3QK0c5BpCmdFyIA9zCpHfi99rrcw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -428,9 +428,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
