--- a/VRChat/69/1283569.html
+++ b/VRChat/69/1283569.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fPqiJhfPEfIxwJBGB9c01wbcY9KIsEtVUGfgB5HKv4Q="></script>
+    "kzON4vONcg9+t3seDb7osvX9Uca9ygCnn9E+InHdoLo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"｢ミーシェ｣用衣装モデル　『たいそうぎ』","description":"本製品は、｢ポンデロニウム研究所 オリジナル３Dモデル「ミーシェ」 」用の衣装モデルです。\n\n本製品に、ミーシェ本体のモデルは含まれません。以下からご購入ください。\nオリジナル３Dモデル「ミーシェ」　https://booth.pm/ja/items/1256087\n\n衣装の導入がUnity上で完結できるよう設定してあります。\n本商品は、ver1.01にて制作しました。バージョンが異なる場合、動作は保証できません。\n\n以下の導入補助スクリプトに対応しています。\n(Store*Snowlightの商品ではありません)\nAuto Dresser | sentz-A生命維持機関 https://sentz-a.booth.pm/items/1300847\n\n\n-----\n2022/04/30\n以後、本商品更新の予定はございません。","url":"https://booth.pm/ja/items/1283569","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1283569/5a0706e7-b4e0-4ffe-a530-adf95b9e4ce5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fPqiJhfPEfIxwJBGB9c01wbcY9KIsEtVUGfgB5HKv4Q="></script>
+    nonce="kzON4vONcg9+t3seDb7osvX9Uca9ygCnn9E+InHdoLo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -504,9 +504,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
