--- a/VRChat/27/1283427.html
+++ b/VRChat/27/1283427.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "tf0K9tWytNCP39q28w+iCgdKjzFzcJtQ+m5iwM4Om4Q="></script>
+    "eMYC0sk/WyFaTWo6O7iFKej+1RxHxk0IHspgDlYluLQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"テーブルとイス","description":"3/23　イス4追加しました。レザーのテクスチャ1枚を追加しました。\n\nBlenderでテーブルとイスを作りました。\nお好みでテクスチャやマテリアルの設定を変更してお使いください。\nサムネイルに映っているものが全てです。（テーブル4、イス7）\n\n\nVRChatで色々な人が物を作っているので自分もとりあえず作ってみたといったところです。\n素人が初めて作ってみたものですので不備、不具合は大目に見てください。\nですが、何かお気づきのことがございましたら教えていただけると今後の糧となります。\n\n\nfbxファイル制作：Pianna\nテクスチャ（leather）撮影：Pianna\n\nUnityパッケージに含まれるテクスチャ2枚（wood,fabric）は下記サイトのものです。\nhttps://www.sharetextures.com/\n\n","url":"https://booth.pm/ja/items/1283427","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/35109731-1a22-4535-a2f0-5dd6f73a477e/i/1283427/c0a0aa1f-afd9-4efd-a6a7-e5e88331141f_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tf0K9tWytNCP39q28w+iCgdKjzFzcJtQ+m5iwM4Om4Q="></script>
+    nonce="eMYC0sk/WyFaTWo6O7iFKej+1RxHxk0IHspgDlYluLQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -514,9 +514,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
