--- a/VRChat/03/1283303.html
+++ b/VRChat/03/1283303.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "H27JSVB3qVU2L64BnyIRAUPyBigIJgnylon35gzTzkc="></script>
+    "Hk0RDwY67G5nth9+TlrQ1ZrC4lHEFXHO+YENWprqBwI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けオリジナル３Dモデル「ショロ」 Ver.2!!","description":"VRchat向けオリジナル３Dモデル「ショロ」 Ver.2!!\nVRCでの使用を想定したキツネアバターです。\n\nBoost版にはQuestでも使える超ローポリ版も同梱！\n\n◆ 2019/07/09 追記\nQuestでも使える超ローポリ版モデルとアニメーションファイルを追加！\nすでにBoost版を購入している方は無償でダウンロードできます！アニメーションファイルは通常版にも同梱！","url":"https://booth.pm/ja/items/1283303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/7db76cf7-7e72-4f84-ba1d-0ba63d5cdd5b/i/1283303/20393386-2b9b-4860-a448-f4085c7f5684_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H27JSVB3qVU2L64BnyIRAUPyBigIJgnylon35gzTzkc="></script>
+    nonce="Hk0RDwY67G5nth9+TlrQ1ZrC4lHEFXHO+YENWprqBwI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -653,9 +653,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
