--- a/VRChat/79/1282379.html
+++ b/VRChat/79/1282379.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "12iyFbY1DzHq2Bd9pApdiuc/L0QmizW/sg9kUBdX338="></script>
+    "yQUChNibuWbSqO4KGFTaD/9SA9bxjrQhcCiNZb5VK2Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けアバター「ご先祖」","description":"私のご先祖様です。\n\nVRChatを想定して設定済みの .unitypackage 形式での配布となります。ハイポリでも軽量・低負荷なオブジェクトです。\n\n無印：△70,000\n軽量版：△20,000 ポリ版、テクスチャは4K\nもっと軽量版：△5,000 ぞ！テクスチャは2K（Arktoon同梱）\nGosenzoスペシャル（応援版）：全バージョン+Arktoon同梱版\n\n\n■ライセンス\n禁止事項\n- 素材そのものの再配布\n- 素材のイメージを著しく損なう利用\n- 公序良俗に反する目的での利用\n- その他、作者が不適切と判断した場合\n\n推奨事項\n- 素材を利用した作品の公開時に可能な範囲で利用素材のクレジットを入れていただけると（しましまPが）嬉しいです。\n  例）「ご先祖」by しましまP、\"Gosenzo\" by shimakid\n\n2019/07/04 更新：利用作品の配布・販売を許可しました。これにより、\n- VRChat などのゲームの個人用アバターとして利用に加えて、作成したアバター・素材を組み込んだワールドなどの配布・販売が可能になります。\n- ご先祖素材を使用したアバターのVRCペデスタル公開もOKですので、どんどん公開してください。\n\n※全部入りも含めて全て無料で一時的に再公開中","url":"https://booth.pm/ja/items/1282379","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/1ca2def6-097f-4cee-84ca-e5b58bd9f29c/i/1282379/7da5fbcb-5ef9-488e-8c56-92bfc6195420_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="12iyFbY1DzHq2Bd9pApdiuc/L0QmizW/sg9kUBdX338="></script>
+    nonce="yQUChNibuWbSqO4KGFTaD/9SA9bxjrQhcCiNZb5VK2Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -505,9 +505,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
