--- a/VRChat/56/1281456.html
+++ b/VRChat/56/1281456.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "X6dVWZuRAT471bMdD2ZEMd4HL+Uu1oIoflrNnNzE+AI="></script>
+    "0qYemy/NBEseSx8qRzWH74/5UXplKjk/TFIEEtyhB7k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"刀晶刃-Astellia-","description":"この度は当ページをご覧いただきありがとうございます。さぎりです。\n\nVRC界で見るリアルな金属質の剣、ギミック満載の剣。すごいですよね。わかります。とてもすごいとさぎりも思います。\nそんな中でふと思ったんです。結晶的サムシングで作られた剣があまりないのではと。やるしかない。作るしか！\n\nというわけで作りました。それがこれ、刀晶刃です。\nこれ、4つのパーツから作ってるんですよ。メインの大きな刃。2つのサイズのサブブレード。そしてグリップ。それぞれ別々に分けることが可能でして、好みの形に組み替えることもできたりするんですよ。便利！結構キラキラ光ります。結晶なので。\n\n色変えとか結構自由にできるようにしてあったりします。たったこれだけのオブジェクトに関わらず20くらいのレイヤーからなっておりまして、こまかーく弄っていただけるようになっています。UV図も付けておきますのでその気になれば好きな模様を描いて使っていただく…なんてこともできますよ！どんな色変えをしてもそれなりに見栄えがある自由度の高さが結晶刃の大きな特徴なのではないでしょうか。\n\nところでこの品。ポリゴン数524と書いてるんですけど、綺麗に見せるようにするとその都合上倍の1048ポリゴンになっちゃうんですよ。これは2種のシェーダーを重ねて表示すると見やすくて綺麗じゃん！ってなったのでです。プレハブでは2つ重ねてあります。が、もちろん1つにしていただくこともできますよ！\n\nシェーダーにはうにショップ様のクリスタルシェーダー(https://booth.pm/ja/items/1148311)とみにすけーぷ様(https://miniscape.booth.pm/)のMMSを使用させていただいているんです。本当に感謝！感謝！\n\nというわけで当商品に含まれるものをお伝えしましょう。\n・SAG_Astellia.unitypackage(いっぱいいっぱい色々入ってる)\n・Astellia.psd(テクスチャ)\n・Astellia.png(UV図)\n・Readme(読もう！)\n・LICENSE(MITライセンス！)\nこの5点ですね！すっきり！\n\nというわけで長々と書くのも見る側がつらいと思いますのでこの辺で…また会いましょう！\n\n※19/3/20/23:05追記\n現在最小サイズの刃晶がちらつくという現象が発生しております。様々な試行錯誤を行い治せないか確認したものの治らなかったのでしばらく我慢していただくか、非表示にしてお楽しみいただきますよう、ご協力お願い申し上げます。","url":"https://booth.pm/ja/items/1281456","offers":{"priceCurrency":"JPY","@type":"Offer","price":"369"},"image":"https://booth.pximg.net/c/620x620/cc7a5528-cef2-45ce-ba77-7bb2b5cb5eb6/i/1281456/f85ab9ff-b27c-4150-a16f-eff636d2cb55_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="X6dVWZuRAT471bMdD2ZEMd4HL+Uu1oIoflrNnNzE+AI="></script>
+    nonce="0qYemy/NBEseSx8qRzWH74/5UXplKjk/TFIEEtyhB7k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -416,9 +416,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
