--- a/VRChat/64/1280964.html
+++ b/VRChat/64/1280964.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+UVd/vUG7x+h3aHT5448O7larTmKWCT8Z21hc3bliLo="></script>
+    "HR0vXgyArFT2fX8P1T2xo2J81FflWG70PtuIs+maOoo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"競泳水着 [VRoid ベータ版 用テクスチャ]","description":"◆商品説明\n\nVRoid Studioベータ版で使用できる、競泳水着のテクスチャーになります。\nテクスチャーサイズは2048×2048。全7種類。\n\n※正式版では使用できません。\n※商品画像にあるモデルデータは含まれません。\n\n◆テクスチャーの使い方\n\n体型編集→テクスチャ→肌\n\nデフォルト画像の上に＋ボタンでレイヤーを作成\n右クリックからインポートを選択し追加します。\n\n◆利用規約\n\n著作権は放棄しません。\n\nデータ改変：可\n\n個人・商用利用：可。クレジット表記の必要もありません。\n\nゲームや動画での利用：可\n\nVRchat・VirtualCastでの利用：可（下記に注意事項あり）\n\nデータ改変の有無に関わらず、再配布・販売は禁止します。\n\n違法、公序良俗に違反する媒体への使用は禁止します。\n\n本人以外が利用できる状態にする行為（VRchatのアバターペデスタル等）は\n再配布に該当する為、禁止とします。\n\nVRoidHub等での他者の利用を禁止する状態での公開は許可します。\n\nテクスチャを使用した際のトラブルに関しては、一切の責任を負いません。\nまた返金は致しかねます。ご了承ください。\n\n利用規約は、VRM、VRoidStudio、VRChat等の仕様・機能変更に伴い、一部改訂されることがあります。\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n店　名：あさづけ屋\n作成者：ＡＺＫ\nTwitter：＠azk_chazuke","url":"https://booth.pm/ja/items/1280964","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/f3d9117d-c7b3-4c0b-8737-f8cba73126eb/i/1280964/ad3de1da-d35b-48d4-9283-11e858a8e5f8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+UVd/vUG7x+h3aHT5448O7larTmKWCT8Z21hc3bliLo="></script>
+    nonce="HR0vXgyArFT2fX8P1T2xo2J81FflWG70PtuIs+maOoo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -569,9 +569,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
