--- a/VRChat/37/1280937.html
+++ b/VRChat/37/1280937.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Udb2VuMRS29q8Njnvl5HItYMVK1OMcel/fEOZSsU5Ss="></script>
+    "4eXoMelYGcgrXryPvclX1jUaoEV063K5o7fJNvdoaGQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【UNITY】アバター用アクセサリー「ゴーグル」【VRCHAT】","description":"ぐりことおそろいのゴーグルモデルです。\n\n頭部の幅に合わせてスケールを調整してご使用ください。\nバンド部分が輪になっていないので、そのまま頭部にぶっ刺していただければと思います。\n\n頭にバインドしているボーンの子にすると一緒に動いてくれるかと思います。\n\n\n色は９色用意。\n\n\n◆モデル仕様\n△ポリゴン：4164\nマテリアル数：２\nテクスチャ数：１\nメッシュ数：２\n\n\nワンメッシュ、ワンマテリアルにしたかったのですが、描画順の関係で、本体とガラス部分で分けています。\n\nマテリアルはUNITYのStandardシェーダーにしてあります。\n一応、エミッションを設定しているので、暗いところでも、色を維持できると思いますが、微妙かもしれません。\n\nVRM形式にするのであれば、専用のトゥーンシェーダーに切り替えていただければ、ポリ数の多いモデルですので、そこそこ良い陰が出るかと思います。\n\n\nテクスチャは、アルベド単色の単純構成にしてありますので、カスタマイズは楽かと思いますが、UVの展開があまり効率的ではないので、編集できるひとは、テクスチャ作成の前に、UVの並べ直しをおすすめします。\n\n\n◆データ仕様\nUNITY/Package形式\nデータ形式：FBX\nテクスチャ：PNG\nprefab同梱\n\nZIPデータをダウンロードしていただき解凍するとUNITY Packageが出てきます。\nUNITY PackageをUNITY上で展開すると、Asset直下にgoggle01フォルダが生成されます。\n\n","url":"https://booth.pm/ja/items/1280937","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/be75e1fe-2b8d-4526-916a-b2d728a328fa/i/1280937/f8d53783-2943-4f70-a6c4-a30af436bd55_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Udb2VuMRS29q8Njnvl5HItYMVK1OMcel/fEOZSsU5Ss="></script>
+    nonce="4eXoMelYGcgrXryPvclX1jUaoEV063K5o7fJNvdoaGQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -531,9 +531,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
